...
    <string name="btn_copy_decrypted_text">"Copy to clipboard"</string>
    <string name="btn_decrypt_clipboard">"Read from clipboard"</string>
    <string name="btn_decrypt_files">"Select input file"</string>
    <string name="btn_encrypt_files">"Encrypt files"</string>
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="btn_not_matching">"Not matching"</string>

    <!-- Shortcut Strings -->
...
    <string name="redirect_import_key_yes">"Scan again"</string>
    <string name="redirect_import_key_no">"Close"</string>

    <string name="request_permission_title">Allow access to your key?</string>
    <string name="request_permission_msg">%1$s requests access to one of your keys, which will allow it to decrypt messages sent to this key. You can revoke access later in OpenKeychain.</string>
    <string name="requested_key_unavailable_warning">This key is not available. To use it, you must import it as one of your own!</string>
    <string name="button_allow">Allow</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_back">Back</string>
    <string name="button_got_it">Got it</string>
    <string name="requested_key_label">Requested key:</string>

    <string name="title_key_status">"Key Status"</string>
...
